--- a/style.css
+++ b/style.css
@@ -1,50 +1,72 @@
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 html {
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    background-color: #121111;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  background-color: #121111;
 }
 div {
-width: 100%;
-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
- header h3{
-    text-align: center;
-    color:darkorange;
-    font-size:30px;
-    padding: 10px 20px;
- }
+header h3 {
+  text-align: center;
+  color: darkorange;
+  font-size: 30px;
+  padding: 10px 20px;
+}
 
-video{
-    width:100%;
-    height:550px; 
-}   
+video {
+  width: 100%;
+  height: 550px;
+}
 
- h1,h2,h3{
-    text-align: center;
-    color: wheat;
-    width: 100%;
- }
+h1,
+h2,
+h3 {
+  text-align: center;
+  color: wheat;
+  width: 100%;
+}
 
-
- /*div button book*/
+/*div button book*/
 .button-book {
-    text-align: center;
+  text-align: center;
 }
 
 /*buttone book*/
 .btn {
-color: wheat;
+  color: wheat;
 }
 
 .btn i {
+  font-size: 2rem;
+  color: #008000;
+  padding-bottom: 20px;
+}
+@media only screen and (min-width: 740px) {
+  header h3 {
+    font-size: 50px;
+    padding: 20px 30px;
+  }
+
+  h1,
+  h2,
+  h3 {
     font-size: 2rem;
-    color: #008000;
+  }
+
+  video {
+    width: 100%;
+    height: 750px;
+  }
+
+  .btn i {
+    font-size: 3rem;
+  }
 }
