--- a/style.css
+++ b/style.css
@@ -64,6 +64,9 @@ h3 {
       margin-top: 20px;
       font-size: 1rem;
     }
+    #AptDoor{
+      display: none;
+    }
 
 /*div button book*/
 .button-book {
