--- a/style.css
+++ b/style.css
@@ -38,37 +38,79 @@ h3 {
   color: wheat;
   width: 100%;
 }
-.main-door{
-  text-align: center;
-  border: 2px solid #333;     /* spessore, tipo e colore del bordo */
-  border-radius: 8px;         /* angoli arrotondati */
-  font-family: sans-serif;    /* font del testo */
-}
-.main-door h3{
-  color:antiquewhite;
-  padding: 14px;
-}
-  button {
-      padding: 15px 30px;
-      font-size: 1.2rem;
-      border: none;
-      border-radius: 8px;
-      background-color: #28a745;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #218838;
-    }
-    #status {
-      margin-top: 20px;
-      font-size: 1rem;
-    }
-    #AptDoor{
-      display: none;
-    }
 
-/*div button book*/
+
+  .container {
+
+    border-radius: 12px;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.1);
+    width: 100%;
+    text-align: center;
+    
+  }
+
+ 
+
+  input[type="password"] {
+    width: calc(100% - 94px);
+    padding: 10px 20px;
+    margin-top: 10px;
+    font-size: 16px;
+    border-radius: 8px;
+    border: 1.8px solid #ccc;
+    transition: border-color 0.3s;
+    outline-offset: 2px;
+    outline-color: transparent;
+  }
+
+  input[type="password"]:focus {
+    border-color: #4a90e2;
+    outline-color: #4a90e2;
+  
+  }
+
+  button {
+    margin-top: 15px;
+    padding: 12px 24px;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    background: #4a90e2;
+    color: white;
+    transition: background-color 0.3s;
+  }
+
+  button:hover:not(:disabled) {
+    background: #357abd;
+  }
+
+  button:disabled {
+    background: #a0a0a0;
+    cursor: not-allowed;
+  }
+
+  #controlPanel {
+    text-align:auto;
+    padding: 15px 50px;
+    display: none;
+  }
+
+  #controlPanel button {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+
+  .log {
+    font-size: 13px;
+    color: #666;
+    min-height: 5px;
+    margin-bottom: 15px;
+    font-style: italic;
+  }
+
+/*div button book whatsapp*/
 .button-book {
   text-align: center;
 }
