--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ h3 {
   width: 100%;
 }
 
+/*authcode style*/
 .container {
   border-radius: 12px;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
@@ -46,14 +47,14 @@ h3 {
 }
 
 #authCodeh3 {
-  padding: 5px;
+  padding: 0px 5px;
 }
 
-input[type="password"] {
+input[type="number"] {
   width: calc(100% - 94px);
   padding: 10px 20px;
   margin-top: 10px;
-  font-size: 20px;
+  font-size: 17px;
   border-radius: 8px;
   border: 1.8px solid #ccc;
   transition: border-color 0.3s;
@@ -61,16 +62,17 @@ input[type="password"] {
   outline-color: transparent;
 }
 
-input[type="password"]:focus {
+input[type="number"]:focus {
   border-color: #4a90e2;
   outline-color: #4a90e2;
 }
 
 button {
-  margin-top: 15px;
+  margin-top: 10px;
   padding: 12px 24px;
   font-size: 16px;
   font-weight: 600;
+  letter-spacing: 1px;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -111,6 +113,32 @@ h5 {
   margin-bottom: 15px;
   font-style: italic;
 }
+.popup {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0,0,0,0.7);
+}
+
+.popup-content {
+  background-color: #fff;
+  margin: 5% auto;
+  padding: 10px;
+  border-radius: 10px;
+  width: 300px;
+  text-align: center;
+}
+  .popup button {
+    margin-top: 10px;
+    padding: 8px 14px;
+    background: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+  }
 
 /*div button book whatsapp*/
 .button-book {
