--- a/style.css
+++ b/style.css
@@ -116,17 +116,18 @@ h5 {
   position: fixed;
   z-index: 9999;
   left: 0; top: 0;
-  width: 100%; height: 100%;
+  width: 100%; height: 80%;
   background-color: rgba(0,0,0,0.7);
 }
 
 .popup-content {
   background-color: #fff;
   margin: 5% auto;
-  padding: 10px;
+  padding: 20px 1px 10px;
   border-radius: 10px;
   width: 300px;
   text-align: center;
+  font-size: 20px;
 }
   .popup button {
     margin-top: 10px;
