--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 .logo {
   font-size: 2.1rem;
   font-weight: 800;
-  color: var(--primary-dark);
+  color: rgba(255, 140, 0, 0.662);
   letter-spacing: 1.5px;
 }
 
