--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
   max-width: 1000px;
   margin: 0 auto;
   padding: 20px;
+  text-align: center;
 }
 
 .header {
@@ -43,9 +44,10 @@ body {
 }
 
 .logo {
-  font-size: 2.1rem;
+  margin-top: -25px;
+  font-size: 2rem;
   font-weight: 800;
-  color: rgba(255, 140, 0, 0.662);
+  color: rgba(255, 140, 0, 0.781);
   letter-spacing: 1.5px;
 }
 
@@ -71,13 +73,19 @@ body {
 }
 
 .card-title {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 600;
   margin-bottom: 10px;
   color: var(--text-primary);
   display: flex;
   align-items: center;
   gap: 12px;
+}
+.card-title1 {
+  font-size: 1.3rem;
+  font-weight: 800;
+  margin-bottom: 10px;
+  color: var(--warning);
 }
 
 .video-container {
@@ -306,10 +314,10 @@ input[type="password"]:focus {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  width: 60px;
-  height: 60px;
+  width: 55px;
+  height: 55px;
   margin-top: 18px;
-  font-size: 2.2rem;
+  font-size: 2rem;
   color: white;
   background: linear-gradient(to right, #25d366, #128c7e);
   border-radius: 50%;
@@ -376,8 +384,10 @@ input[type="password"]:focus {
 }
 
 .footer {
+
+  bottom: 0;
   margin-top: 40px;
-  padding: 24px;
+  padding: 24px 24px 0px 24px;
   text-align: center;
   color: var(--text-muted);
   font-size: 0.9rem;
@@ -606,7 +616,7 @@ input[type="password"]:focus {
   }
 
   .card-title {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
 
   .confirmation-buttons {
