--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
   font-size: 1.3rem;
   font-weight: 800;
   margin-bottom: 10px;
-  color: var(--warning);
+  color: #ffaa00ce;
 }
 
 .video-container {
