--- a/style.css
+++ b/style.css
@@ -432,10 +432,14 @@ input[type="password"]:focus {
 }
 
 .admin-section {
+  padding: 10px;
+  border-radius: 4px;
+  border: 2px solid;
+  border-color:rgba(63, 60, 55, 0.454);
   z-index: 9999;
+  margin-top: 10px;
   margin-bottom: 28px;
   padding-bottom: 28px;
-  border-bottom: 1px solid var(--dark-border);
 }
 
 .admin-section:last-child {
